--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,12 @@ jobs:
           Meta/serenity.sh image
         timeout-minutes: 180
 
+      - name: Build GRUB image
+        run: |
+          cd Build/x86_64/
+          ninja grub-image
+        timeout-minutes: 60
+
       - name: Prepare artifacts
         run: |
           # Create a tar archive of the entire directory including dotfiles
